# Colon_Segmentation_Project

./: 2dPick.cxx  3dPick.cxx  3dPick_inVector.cxx  CMakeLists.txt  Pick_FastMarching.cxx  README  dilate.cxx  erosion.cxx  readNII.cxx  seedIndex  seedIndex_air
